--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="box">
-        <span style="--i:1;"><img src="yoshio_image/yos1.JPG"></span>
-        <span style="--i:2;"><img src="yoshio_image/yos2.JPG"></span>
-        <span style="--i:3;"><img src="yoshio_image/yos3.JPG"></span>
-        <span style="--i:4;"><img src="yoshio_image/yos4.JPG"></span>
-        <span style="--i:5;"><img src="yoshio_image/yos5.JPG"></span>
-        <span style="--i:6;"><img src="yoshio_image/yos6.JPG"></span>
-        <span style="--i:7;"><img src="yoshio_image/yos7.JPG"></span>
-        <span style="--i:8;"><img src="yoshio_image/yos8.JPG"></span>
-        <span style="--i:9;"><img src="yoshio_image/edit_yos1.jpg"></span>
+        <span style="--i:1;"><img src="more_image/yos1.JPG"></span>
+        <span style="--i:2;"><img src="more_image/yos2.JPG"></span>
+        <span style="--i:3;"><img src="more_image/yos3.JPG"></span>
+        <span style="--i:4;"><img src="more_image/yos4.JPG"></span>
+        <span style="--i:5;"><img src="more_image/yos5.JPG"></span>
+        <span style="--i:6;"><img src="more_image/yos6.JPG"></span>
+        <span style="--i:7;"><img src="more_image/yos7.JPG"></span>
+        <span style="--i:8;"><img src="more_image/yos8.JPG"></span>
+        <span style="--i:9;"><img src="more_image/edit_yos1.jpg"></span>
         <span style="--i:10;"><img src="images/img2.jpg"></span>
         <span style="--i:11;"><img src="images/img3.jpg"></span>
         <span style="--i:12;"><img src="images/img4.jpg"></span>
